Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132700

[REG 6.6 -> 6.7] Click event handling not working using mouse/trackpad on Android

XMLWordPrintable

    • Android
    • d908e0439 (dev), 65e9eca63 (6.9), a3203542d (6.8)

      Using Qt 6.7.3 or 6.8.1, events from a mouse or trackpad on Android are not handled correctly in QML. This works correctly in Qt 6.5.6 and 6.6.3. This can be reproduced by connecting a USB or Bluetooth mouse to any Android device, or using the built-in trackpad on Chromebooks.

      For example, the following behavior is observed when interacting with a Button element using a mouse/trackpad:

      • The onClicked handler is never triggered
      • Clicking the button will permanently put it into a highlighted UI state until another element is clicked (i.e. the mouse-up event does not un-highlight the button)
      • Moving the cursor outside the button bounds will un-highlight a clicked/highlighted button, and moving the cursor back inside its bounds will highlight it again

      Attached is a demo video showing the above points.

      The following simple QML can be used to reproduce the above:

      ColumnLayout {
          Button {
              text: "Button 1"
              onClicked: label.text = "Clicked 1 " + (new Date()).toLocaleTimeString();
          }
      
          Button {
              text: "Button 2"
              onClicked: label.text = "Clicked 2 " + (new Date()).toLocaleTimeString();
          }
      
          Text {
              id: label
              text: ""
          }
      }

       

        For Gerrit Dashboard: QTBUG-132700
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            fseiffert Frederik Seiffert
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes